--- a/env.example
+++ b/env.example
@@ -1,18 +1,36 @@
-############
 # LeaveBoard Self-Hosting Configuration
-############
+# Copy this file to .env and update the values
 
-# Database password - CHANGE THIS!
-POSTGRES_PASSWORD=your-super-secret-password-change-me
+# ===================
+# REQUIRED - Change these!
+# ===================
+DB_PASSWORD=change-this-secure-password
+JWT_SECRET=change-this-to-a-long-random-string-at-least-32-chars
 
-# JWT Secret - CHANGE THIS! (minimum 32 characters)
-JWT_SECRET=your-super-secret-jwt-token-minimum-32-chars
+# ===================
+# Application URLs
+# ===================
+APP_URL=http://localhost:3080
+WEB_PORT=80
+API_PORT=3080
 
-# Supabase Keys (generated from JWT_SECRET)
-# These are demo keys - the install script will generate real ones
-ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiJ9.placeholder
-SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoic2VydmljZV9yb2xlIn0.placeholder
+# ===================
+# Database
+# ===================
+DB_USER=leaveboard
+DB_NAME=leaveboard
+DB_PORT=5432
 
-# URLs
-SITE_URL=http://localhost:3080
-API_URL=http://localhost:3080
+# ===================
+# Redis
+# ===================
+REDIS_PORT=6379
+
+# ===================
+# Email (Optional)
+# ===================
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=noreply@leaveboard.local
